--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
 
@@ -27,14 +27,17 @@
 
   <body>
     <!-- section [Navigation] -->
+
     <nav>
-      <a href="index.html"><img src="/assets/img/logo.png" alt="logo" /></a>
+      <section class="top-nav">
+        <i class="fa-solid fa-truck"></i>
+        <p>Bestiller du nu, vil din ordre blive sendt i dag</p>
+      </section>
+
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li><a class="signup-btn" href="#">Sign up</a></li>
+        <li><a href="#">Vores produktgrupper</a></li>
+        <li><a href="#">Vi anbefaler</a></li>
+        <li><a href="#">Kontakt os</a></li>
       </ul>
 
       <i class="fa-solid fa-bars burgerMenuOpen"></i>
@@ -42,10 +45,140 @@
     </nav>
 
     <!-- Section [Hero] -->
-    <section class="hero"></section>
+    <section class="hero">
+      <section class="hero-slider">
+        <img src="/assets/img/Hero-img.png" alt="picture of bag" />
+        <h2>Vi stræber efter at skabe en unik shoppingoplevelse,</h2>
+        <h2>hvor elegance møder funktionalitet</h2>
+      </section>
 
-    <!-- Section [name] -->
-    <section class=""></section>
+      <section class="hero-grid">
+        <img src="/assets/img/Rectangle 1.png" alt="picture of bag" />
+        <img src="/assets/img/Rectangle 2.png" alt="picture of bag" />
+        <img src="/assets/img/Rectangle 3.png" alt="picture of bag" />
+        <img src="/assets/img/Rectangle 4.png" alt="picture of bag" />
+        <img src="/assets/img/Rectangle 5.png" alt="picture of bag" />
+        <img src="/assets/img/Rectangle 6.png" alt="picture of bag" />
+      </section>
+    </section>
+
+    <!-- Section [Our products] -->
+    <section class="our-products">
+      <h1>Vores tre produktgrupper</h1>
+
+      <section class="our-products-container">
+        <article>
+          <h3>Tasker</h3>
+          <div class="our-products-container-flex">
+            <img src="/assets/img/bag-icon.png" alt="picture of bag" />
+            <div>
+              <p>
+                Udforsk vores eksklusive kollektion af lædertasker, designet til
+                den moderne kvinde,
+              </p>
+              <p>
+                der værdsætter både stil og funktionalitet. Vores lædertasker er
+                fremstillet af
+              </p>
+              <p>
+                højkvalitets læder, og hver eneste detalje er omhyggeligt
+                udformet for at give dig en
+              </p>
+              <p>
+                sofistikeret og tidløs taske. Med feminine detaljer som elegante
+                syninger, luksuriøse
+              </p>
+              <p>
+                foringer og stilfulde metalelementer er vores tasker både
+                praktiske og elegante.
+              </p>
+              <p>
+                Uanset om du har brug for en rummelig skuldertaske til
+                hverdagsbrug eller en chic
+              </p>
+              <p>
+                clutch til særlige lejligheder, finder du den perfekte
+                lædertaske hos os.
+              </p>
+            </div>
+          </div>
+        </article>
+
+        <article>
+          <h3>Bælter</h3>
+          <div class="our-products-container-flex">
+            <img src="/assets/img/belt-icon.png" alt="picture of belt" />
+            <div>
+              <p>
+                Udforsk vores eksklusive kollektion af lædertasker, designet til
+                den moderne kvinde,
+              </p>
+              <p>
+                der værdsætter både stil og funktionalitet. Vores lædertasker er
+                fremstillet af
+              </p>
+              <p>
+                højkvalitets læder, og hver eneste detalje er omhyggeligt
+                udformet for at give dig en
+              </p>
+              <p>
+                sofistikeret og tidløs taske. Med feminine detaljer som elegante
+                syninger, luksuriøse
+              </p>
+              <p>
+                foringer og stilfulde metalelementer er vores tasker både
+                praktiske og elegante.
+              </p>
+              <p>
+                Uanset om du har brug for en rummelig skuldertaske til
+                hverdagsbrug eller en chic
+              </p>
+              <p>
+                clutch til særlige lejligheder, finder du den perfekte
+                lædertaske hos os.
+              </p>
+            </div>
+          </div>
+        </article>
+
+        <article>
+          <h3>Sko</h3>
+          <div class="our-products-container-flex">
+            <img src="/assets/img/shoe-icon.png" alt="picture of shoe" />
+            <div>
+              <p>
+                Udforsk vores eksklusive kollektion af lædertasker, designet til
+                den moderne kvinde,
+              </p>
+              <p>
+                der værdsætter både stil og funktionalitet. Vores lædertasker er
+                fremstillet af
+              </p>
+              <p>
+                højkvalitets læder, og hver eneste detalje er omhyggeligt
+                udformet for at give dig en
+              </p>
+              <p>
+                sofistikeret og tidløs taske. Med feminine detaljer som elegante
+                syninger, luksuriøse
+              </p>
+              <p>
+                foringer og stilfulde metalelementer er vores tasker både
+                praktiske og elegante.
+              </p>
+              <p>
+                Uanset om du har brug for en rummelig skuldertaske til
+                hverdagsbrug eller en chic
+              </p>
+              <p>
+                clutch til særlige lejligheder, finder du den perfekte
+                lædertaske hos os.
+              </p>
+            </div>
+          </div>
+        </article>
+      </section>
+    </section>
 
     <!-- Section [name] -->
     <section class=""></section>
