--- a/index.html
+++ b/index.html
@@ -180,8 +180,40 @@
       </section>
     </section>
 
-    <!-- Section [name] -->
-    <section class=""></section>
+    <!-- Section [Recommended] -->
+    <section class="recommended">
+      <h1>Vi anbefaler</h1>
+
+      <section class="recommended-container">
+        <article>
+          <img src="/assets/img/recommended-shoe.png" alt="picture of shoe" />
+          <p>Roccamore</p>
+          <p>Lili Gold Glitter</p>
+          <h4>2200</h4>
+        </article>
+
+        <article>
+          <img src="/assets/img/recommended-bag.png" alt="picture of bag" />
+          <p>Roccamore</p>
+          <p>Lili Gold Glitter</p>
+          <h4>2200</h4>
+        </article>
+
+        <article>
+          <img src="/assets/img/recommended-bag-2.png" alt="picture of bag" />
+          <p>Saddler</p>
+          <p>Garda Totetaske</p>
+          <h4>1500</h4>
+        </article>
+
+        <article>
+          <img src="/assets/img/recommended-shoe.png" alt="picture of belt" />
+          <p>Saddler</p>
+          <p>Mercy Ruskidsbælte</p>
+          <h4>500</h4>
+        </article>
+      </section>
+    </section>
 
     <!-- Section [name] -->
     <section class=""></section>
