--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
     <section class="hero">
       <section class="hero-slider">
         <img src="/assets/img/Hero-img.png" alt="picture of bag" />
-        <h2>Vi stræber efter at skabe en unik shoppingoplevelse,</h2>
-        <h2>hvor elegance møder funktionalitet</h2>
+        <h2>
+          Vi stræber efter at skabe en unik shoppingoplevelse, <br />
+          hvor elegance møder funktionalitet
+        </h2>
       </section>
 
       <section class="hero-grid">
