update css + js

--- a/index.html
+++ b/index.html
@@ -239,10 +239,18 @@
           id="textArea"
           placeholder="BESKED..."
           required
-          minlength="10"
+          minlength="1"
           maxlength="5000"
         ></textarea>
         <button id="submitInput" type="submit">SEND BESKED</button>
+        <div id="pushMessage">
+          <i class="fa-regular fa-envelope"></i>
+          <p>Din mail er sendt &#10003;</p>
+
+          <a href="index.html"
+            >Tilbage til <i class="fa-solid fa-house"></i>
+          </a>
+        </div>
       </form>
     </section>
   </body>
