--- a/index.html
+++ b/index.html
@@ -37,6 +37,66 @@
         <li><a href="#">Vores produktgrupper</a></li>
         <li><a href="#">Vi anbefaler</a></li>
         <li><a href="#">Kontakt os</a></li>
+        <li>
+          <div class="cart-box">
+            <div class="cart-icon">
+              <i class="fa-solid fa-basket-shopping"></i>
+            </div>
+            <div class="whole-cart-window">
+              <h4>Indkøbskurv</h4>
+              <div class="cart-wrapper">
+                <!-- Item 1 start -->
+                <div class="cart-item">
+                  <img
+                    src="/assets/img/recommended-shoe.png"
+                    alt="picture of shoe"
+                  />
+                  <div class="details">
+                    <h5>
+                      Roccamore <br />
+                      Lili Gold Glitter
+                    </h5>
+                    <p>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      <span class="quantity">Antal: 1</span>
+                      <span class="price">2200kr.</span>
+                    </p>
+                  </div>
+                  <div class="cancel">
+                    <i class="fa-solid fa-square-xmark"></i>
+                  </div>
+                </div>
+                <!-- Item 1 end -->
+
+                <!-- Item 2 -->
+                <div class="cart-item">
+                  <img
+                    src="/assets/img/recommended-shoe.png"
+                    alt="picture of shoe"
+                  />
+                  <div class="details">
+                    <h5>
+                      Roccamore <br />
+                      Lili Gold Glitter
+                    </h5>
+                    <p>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      <span class="quantity">Antal: 1</span>
+                      <span class="price">2200kr.</span>
+                    </p>
+                  </div>
+                  <div class="cancel">
+                    <i class="fa-solid fa-square-xmark"></i>
+                  </div>
+                </div>
+                <!-- Item 2 end -->
+              </div>
+              <div class="subtotal">Total 0,00 kr.</div>
+              <div class="checkout">Check ud</div>
+              <div class="view-cart">Se kurv</div>
+            </div>
+          </div>
+        </li>
       </ul>
 
       <i class="fa-solid fa-bars burgerMenuOpen"></i>
