update shopping cart

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <li>
           <div class="cart-box">
             <div class="cart-icon">
-              <i class="fa-solid fa-basket-shopping"></i>
+              <i class="fa-solid fa-basket-shopping none-empty"></i>
             </div>
-            <div class="whole-cart-window">
+            <div class="whole-cart-window hide-shopping-list">
               <h4>Indkøbskurv</h4>
               <div class="cart-wrapper">
                 <!-- Item 1 start -->
@@ -251,6 +251,7 @@
           <p>Roccamore</p>
           <p>Lili Gold Glitter</p>
           <h4>2200</h4>
+          <span class="add-to-cart-btn">Tilføj til kurven</span>
         </article>
 
         <article>
@@ -258,6 +259,7 @@
           <p>Roccamore</p>
           <p>Lili Gold Glitter</p>
           <h4>2200</h4>
+          <span class="add-to-cart-btn">Tilføj til kurven</span>
         </article>
 
         <article>
@@ -265,6 +267,7 @@
           <p>Saddler</p>
           <p>Garda Totetaske</p>
           <h4>1500</h4>
+          <span class="add-to-cart-btn">Tilføj til kurven</span>
         </article>
 
         <article>
@@ -272,6 +275,7 @@
           <p>Saddler</p>
           <p>Mercy Ruskidsbælte</p>
           <h4>500</h4>
+          <span class="add-to-cart-btn">Tilføj til kurven</span>
         </article>
       </section>
     </section>
