--- a/index.html
+++ b/index.html
@@ -36,13 +36,16 @@
       <ul class="nav-links">
         <li><a href="#">Vores produktgrupper</a></li>
         <li><a href="#">Vi anbefaler</a></li>
-        <li><a href="#">Kontakt os</a></li>
+        <li><a class="a-contact" href="#">Kontakt os</a></li>
+      </ul>
+
+      <ul>
         <li>
           <div class="cart-box">
             <div class="cart-icon">
               <i class="fa-solid fa-basket-shopping none-empty"></i>
             </div>
-            <div class="whole-cart-window hide-shopping-list">
+            <div class="whole-cart-window">
               <h4>Indkøbskurv</h4>
               <div class="cart-wrapper">
                 <!-- Item 1 start -->
