--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="cart-icon">
               <i class="fa-solid fa-basket-shopping none-empty"></i>
             </div>
-            <div class="whole-cart-window">
+            <div class="whole-cart-window hide-shopping-list">
               <h4>Indkøbskurv</h4>
               <div class="cart-wrapper">
                 <!-- Item 1 start -->
